objects/AIA_Group_Structure_Form_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account_Rate__c</fullName>
        <inlineHelpText>How is the account rated for Retirees, Cobra and ESRD Medicare?</inlineHelpText>
        <label>Account Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Rate</fullName>
                </value>
                <value>
                    <fullName>All Coverage Levels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Specified_Product_Name__c</fullName>
        <formula>Proposed_Products__r.Account_Specified_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Specified Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_Prefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alpha Prefix</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_Prefix_check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for checking alpha prefix in AIA_GSM_GSRFProductTriggerHelper as per us 234 point 7</description>
        <label>Alpha Prefix check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDH_Fund_Type__c</fullName>
        <formula>TEXT( Proposed_Products__r.CDH_Fund_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDH Fund Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Type__c</fullName>
        <formula>TEXT( Proposed_Products__r.CDH_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDH Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH__c</fullName>
        <formula>TEXT( Proposed_Products__r.CDH__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Level__c</fullName>
        <label>Coverage Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deps_Count__c</fullName>
        <defaultValue>'0'</defaultValue>
        <description>used in drawloop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deps Count</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Partner__c</fullName>
        <label>Domestic Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Retiree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FACETS_Group_Number__c</fullName>
        <formula>Group_Structure_Request_Form__r.Implementation__r.Account__r.Facets_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FACETS Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSA_BlueFund__c</fullName>
        <formula>Proposed_Products__r.FSA_BlueFund__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSA BlueFund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <formula>TEXT(Proposed_Products__r.Funding_Arrangement__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Arrangement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Structure Request Form</label>
        <referenceTo>AIA_Group_Structure_Request_Form__c</referenceTo>
        <relationshipName>Group_Structure_Request_Form_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Groups_count__c</fullName>
        <defaultValue>'0'</defaultValue>
        <description>used in drawloop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Groups count</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gsp_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gsp Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_Covering_Medicare_Retirees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account Covering Medicare Retirees?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limited_Coverage_Level__c</fullName>
        <label>Limited Coverage Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Coverage_Level__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INDIVIDUAL</fullName>
                </value>
                <value>
                    <fullName>SUBSCRIBER/SPOUSE</fullName>
                </value>
                <value>
                    <fullName>PARENT/CHILD</fullName>
                </value>
                <value>
                    <fullName>FAMILY</fullName>
                </value>
                <value>
                    <fullName>PARENT/CHILDREN</fullName>
                </value>
                <value>
                    <fullName>SAME GENDER MARRIED - 2 PARTY</fullName>
                </value>
                <value>
                    <fullName>SAME GENDER MARRIED - 2 PARTY AND FAMILY</fullName>
                </value>
                <value>
                    <fullName>SAME GENDER MARRIED - FAMILY</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC PARTNER – 2 PARTY</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC PARTNER – 2 PARTY AND FAMILY</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC PARTNER – FAMILY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Indicator__c</fullName>
        <formula>TEXT(Proposed_Products__r.Addition_to_Platform_Indicator__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Text(Proposed_Products__r.Plan_Name__r.Product_Line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Proposed_Products__r.Plan_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Product</label>
        <referenceTo>Proposed_Products__c</referenceTo>
        <relationshipLabel>Group Structure Products</relationshipLabel>
        <relationshipName>Group_Structure_Request_Form_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Medical_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Medical Product</label>
        <referenceTo>AIA_Group_Structure_Form_Product__c</referenceTo>
        <relationshipLabel>Group Structure Products</relationshipLabel>
        <relationshipName>Group_Structure_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Coverage_Level__c</fullName>
        <formula>IF( ISPICKVAL( Coverage_Level__c , 'Standard') ,
'- INDIVIDUAL'+ BR() +
'- SUBSCRIBER/SPOUSE'+ BR() +
'- PARENT/CHILD'+ BR() +
'- FAMILY'+ BR() +
'- PARENT/CHILDREN'+ BR() +
'- SAME GENDER MARRIED'+ BR() , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Coverage Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Category__c</fullName>
        <label>Subscriber Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1- Active</fullName>
                </value>
                <value>
                    <fullName>2 - Non Medicare Retirees</fullName>
                </value>
                <value>
                    <fullName>3 - Medicare Retirees</fullName>
                </value>
                <value>
                    <fullName>4 - Cobra</fullName>
                </value>
                <value>
                    <fullName>5 - Medicare and Non Medicare Retirees</fullName>
                </value>
                <value>
                    <fullName>6 - LTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TERM_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TERM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Type__c</fullName>
        <formula>TEXT(Proposed_Products__r.Addition_to_Platform_Indicator__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_There_Be_Non_Funded_Participants__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will There Be Non-Funded Participants?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>packages_count__c</fullName>
        <defaultValue>'0'</defaultValue>
        <description>used in drawloop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>packages count</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_count__c</fullName>
        <description>used in drawloop</description>
        <encryptionScheme>None</encryptionScheme>
        <label>total count</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Group Structure Product</label>
    <nameField>
        <displayFormat>GSP-{000000}</displayFormat>
        <label>Group Structure Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Structure Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Dental</fullName>
        <active>true</active>
        <label>Dental</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drug</fullName>
        <active>true</active>
        <label>Drug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical</fullName>
        <active>true</active>
        <label>Medical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vision</fullName>
        <active>true</active>
        <label>Vision</label>
    </recordTypes>
</CustomObject>